--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fastify": "^4.24.3",
     "history": "^5.3.0",
     "minipass": "^7.0.4",
+    "openai": "^4.77.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
