--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.20.0",
     "unihead": "^0.0.6",
-    "valtio": "^1.12.0"
+    "valtio": "^1.12.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
