--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fastify/vite": "^6.0.5",
     "fastify": "^4.24.3",
     "history": "^5.3.0",
+    "lucide-react": "^0.469.0",
     "minipass": "^7.0.4",
     "openai": "^4.77.0",
     "react": "^18.2.0",
